--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/ContraLevel.ContraLevel
 EditorStartupMap=/Game/Maps/ContraLevel.ContraLevel
-GameInstanceClass=/Game/Blueprints/GameInstance.GameInstance_C
+GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
